# fieldx

./: .dockerignore  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README-L1.tpl  README-L2.tpl  README-package.tpl  README.md  README.tpl  cliff.toml  makefile.ds  release.toml  rust-toolchain.toml
fieldx/: Cargo.toml  Makefile.toml  README.md  README.tpl  release.toml
fieldx/docs/: .gitignore  book.toml  doc_sample.sh  logo-transparent.xcf
fieldx/docs/assets/css/: custom-variables.css  custom.css
fieldx/docs/src/: CHANGELOG.md  SUMMARY.md  basics.md  feature_flags.md  fieldx_aux.md  fieldx_core.md  indexing.md  inner_workings.md  introduction.md  lock_n_lazy.md  more_on_locks.md  references.md  release-notes.md
fieldx/docs/src/basics/: accessors.md  attributes_arguments_and_subarguments.md  basic_field_decorations.md  builder_pattern.md  coercion.md  construction.md  default.md  documentation.md  field-or-method.md  first_steps.md  generated_entity_attributes.md  getters_and_setters.md  laziness_protocol.md  lazy_field_initialization.md  locks.md  mode_async.md  modes_of_operation.md  mutability.md  optional_values.md  reference_counted_structs.md  serialization.md  setters.md  terminology.md  visibility.md
fieldx/docs/src/fieldx_aux/: helpers.md  nesting.md  properties.md  traits.md
fieldx/docs/src/intro/: example.md
fieldx/docs/src/release-notes/: v0.2.0.md
fieldx/examples/: book_accessor.rs  book_async.rs  book_attributes.rs  book_builder_pattern.rs  book_doc.rs  book_first_steps.rs  book_inner_mut.rs  book_into.rs  book_intro_example.rs  book_lazy_lock.rs  book_lock.rs  book_optional.rs  book_rc.rs  book_serde.rs  book_setter.rs  book_visibility.rs
fieldx/src/: async.rs  error.rs  errors.rs  fxproxy.rs  lib.rs  lock_guards.rs  plain.rs  sync.rs  traits.rs
fieldx/src/async/: fxlock.rs  fxproxy.rs
fieldx/src/sync/: fxlock.rs  fxproxy.rs
fieldx/tests/: accessor_mode.rs  as_ref.rs  async.rs  async_fallible.rs  async_lock.rs  builder_const_generic.rs  builder_generic_default.rs  builder_implicit.rs  builder_init.rs  builder_opt_in.rs  builder_required.rs  builder_self_in_default.rs  compilation.rs  defaults.rs  fxrc.rs  inner_mut_copy_clone.rs  lazy_mode_mix.rs  mutable_accessor.rs  new.rs  no_default.rs  nonsync.rs  nonsync_builder.rs  nonsync_builder_generics.rs  nonsync_generics.rs  nonsync_option.rs  nonsync_optional.rs  nonsync_rc.rs  nonsync_serde.rs  nonsync_serde_generic.rs  optional_inner_mut.rs  plain.rs  plain_builder.rs  plain_builder_custom_error.rs  plain_builder_generics.rs  plain_fallible.rs  plain_generics.rs  plain_optional.rs  plain_rc.rs  plain_serde.rs  plain_serde_generic.rs  (+21 more)
fieldx/tests/compilable/: drop.rs  no_reader.rs  serde_optional.rs
fieldx/tests/syncish/: mod.rs
fieldx/tests/syncish_generics/: mod.rs
fieldx/tests/uncompilable/: deserialize_off.rs  incompat_args.rs  incompat_field_args.rs  misplaced_subargs.rs  non_copy.rs  post_build_span.rs  priv_accessor.rs  private.rs  private_new.rs  serialize_deserialize_off.rs  serialize_off.rs  skip.rs  unused_builder.rs  unused_reader.rs
fieldx/tests/uncompilable/1.77/: incompat_args.stderr  non_copy.rs  non_copy.stderr  priv_accessor.rs  priv_accessor.stderr  private.rs  private.stderr  unused_builder.stderr  unused_reader.rs  unused_reader.stderr
fieldx/tests/uncompilable/1.77+async/: deserialize_off.stderr
fieldx/tests/uncompilable/1.77+serde/: non_copy.stderr
fieldx/tests/uncompilable/1.77+serde,sync/: deserialize_off.stderr  post_build_span.stderr  serialize_off.stderr
fieldx/tests/uncompilable/1.77+serde,sync,async/: deserialize_off.stderr  private_new.stderr  serialize_off.stderr
fieldx/tests/uncompilable/1.77+sync,async/: non_copy.stderr  priv_accessor.stderr
fieldx/tests/uncompilable/1.78+async/: non_copy.stderr
fieldx/tests/uncompilable/1.78+serde/: deserialize_off.stderr  (+1 more)
fieldx/tests/uncompilable/1.78+serde,async/: serialize_deserialize_off.stderr
fieldx/tests/uncompilable/1.78+serde,async-lock,clonable-lock/: misplaced_subargs.stderr  private.stderr
fieldx/tests/uncompilable/1.78+serde,async-tokio/: non_copy.stderr
fieldx/tests/uncompilable/1.78+serde,sync/: deserialize_off.stderr  serialize_off.stderr
fieldx/tests/uncompilable/1.78+serde,sync,async-lock/: deserialize_off.stderr  serialize_off.stderr
fieldx/tests/uncompilable/1.78+serde,sync,clonable-lock/: deserialize_off.stderr
fieldx/tests/uncompilable_serde/: deserialize_off.rs  serialize_deserialize_off.rs  serialize_off.rs  serialize_off.stderr
fieldx_aux/: Cargo.toml  README.md  release.toml
fieldx_aux/src/: accessor_helper.rs  attributes.rs  base_helper.rs  builder_helper.rs  default_arg.rs  default_helper.rs  doc_arg.rs  fallible.rs  lib.rs  meta_value.rs  nesting_attr.rs  property.rs  serde_helper.rs  setter_helper.rs  syn_value.rs  traits.rs  util.rs  value.rs  with_origin.rs
fieldx_aux/tests/: fxhelper.rs  to_tokens.rs
fieldx_core/: Cargo.toml  README.md
fieldx_core/src/: codegen.rs  ctx.rs  field_receiver.rs  lib.rs  struct_receiver.rs  types.rs  util.rs
fieldx_core/src/codegen/: constructor.rs
fieldx_core/src/ctx/: codegen.rs  field.rs
fieldx_core/src/field_receiver/: props.rs
fieldx_core/src/struct_receiver/: args.rs
fieldx_core/src/types/: helper.rs  impl_details.rs  meta.rs
fieldx_derive/: Cargo.toml  README.md  release.toml
fieldx_derive/src/: codegen.rs  ctx.rs  field_receiver.rs  fields.rs  helper.rs  input_receiver.rs  lib.rs  util.rs
fieldx_derive/src/codegen/: codegen_trait.rs  constructor.rs  context.rs  derive_ctx.rs  method_constructor.rs  mod.rs  nonsync.rs  plain.rs  serde.rs  sync.rs
fieldx_derive/src/ctx/: codegen.rs  field.rs
fieldx_derive/src/field_receiver/: props.rs
fieldx_derive/src/helper/: accessor.rs  attributes.rs  base.rs  builder.rs  default.rs  nesting_attr.rs  serde.rs  setter.rs  value.rs  with_origin.rs
fieldx_derive/src/util/: args.rs
fieldx_derive_support/: Cargo.toml  Makefile.toml  README.md
fieldx_derive_support/src/: lib.rs
fieldx_derive_support/tests/: name.rs
(+135 files in other folders)
