[workspace.package]
    authors       = ["Vadim Belman"]
    categories    = ["concurrency", "development-tools::procedural-macro-helpers", "rust-patterns"]
    documentation = "https://docs.rs/fieldx"
    edition       = "2021"
    exclude       = ["Makefile.toml", "release.toml"]
    keywords      = ["lazy", "serde", "builder", "dependency-injection", "thread-safe"]
    license       = "BSD-3-Clause"
    license-file  = "LICENSE"
    repository    = "https://github.com/vrurg/fieldx.git"
    rust-version  = "1.77"

[workspace]
    members  = ["fieldx", "fieldx_aux", "fieldx_derive", "fieldx_core", "fieldx_derive_support"]
    resolver = "2"

[workspace.dependencies]
    async-trait           = "0.1"
    cargo-toolchain       = "0.1"
    crossbeam             = "0.8"
    darling               = ">=0.20.11"
    delegate              = "0.13"
    enum_dispatch         = "0.3"
    fieldx                = { version = "0.1.20-beta.1", path = "fieldx" }
    fieldx_aux            = { version = "0.2.0-beta.1", path = "fieldx_aux" }
    fieldx_core           = { version = "0.2.0-beta.1", path = "fieldx_core" }
    fieldx_derive         = { version = "0.1.20-beta.1", path = "fieldx_derive" }
    fieldx_derive_support = { version = "0.2.0-beta.1", path = "fieldx_derive_support" }
    getset                = "0.1"
    num_cpus              = "1.16"
    once_cell             = "1.21"
    parking_lot           = "0.12"
    paste                 = "1.0"
    proc-macro2           = "1.0"
    quote                 = "1.0"
    rust-format           = "0.3"
    rustc_version         = "0.4"
    serde                 = { version = "1.0", features = ["derive"] }
    serde_json            = "1.0"
    syn                   = "2.0"
    thiserror             = "2.0"
    tokio                 = { version = "1.45", default-features = false }
    trybuild              = ">=1.0"

[patch.crates-io]
    fieldx                = { path = "fieldx" }
    fieldx_aux            = { path = "fieldx_aux" }
    fieldx_core           = { path = "fieldx_core" }
    fieldx_derive         = { path = "fieldx_derive" }
    fieldx_derive_support = { path = "fieldx_derive_support" }

[profile.dev]
    debug = true
