[package]
    authors.workspace      = true
    categories.workspace   = true
    description            = "Procedural macro for constructing structs with lazily initialized fields, builder pattern, and serde support with a focus on declarative syntax."
    edition.workspace      = true
    exclude.workspace      = true
    keywords.workspace     = true
    license-file.workspace = true
    name                   = "fieldx"
    readme                 = "../README.md"
    repository.workspace   = true
    version                = "0.1.8-beta.2"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    fieldx_aux    = { workspace = true }
    fieldx_derive = { workspace = true, features = ["tracing"] }
    getset        = { workspace = true }
    parking_lot   = { workspace = true }
    serde         = { workspace = true, optional = true }
    thiserror     = { workspace = true }
    tokio         = { workspace = true, features = ["sync"] }

[dev-dependencies]
    cargo-toolchain = { workspace = true }
    crossbeam       = { workspace = true }
    num_cpus        = { workspace = true }
    parking_lot     = { workspace = true }
    rustc_version   = { workspace = true }
    serde_json      = { workspace = true }
    tokio           = { workspace = true, default-features = false, features = ["macros", "rt", "rt-multi-thread", "time"] }
    trybuild        = { workspace = true }

[features]
    diagnostics = ["fieldx_derive/diagnostics"]
    send_guard  = ["parking_lot/send_guard"]
    serde       = ["fieldx_derive/serde", "parking_lot/serde", "dep:serde"]
