[package]
    authors.workspace       = true
    categories.workspace    = true
    description             = "Various types and tools useful for fieldx crates and, potentially, to users of fieldx"
    documentation.workspace = true
    edition.workspace       = true
    exclude.workspace       = true
    keywords.workspace      = true
    license-file.workspace  = true
    name                    = "fieldx_aux"
    repository.workspace    = true
    rust-version.workspace  = true
    version                 = "0.1.17-beta.1"

[dependencies]
    darling               = { workspace = true, features = ["suggestions"] }
    fieldx_derive_support = { workspace = true }
    getset                = { workspace = true }
    paste                 = { workspace = true }
    proc-macro2           = { workspace = true }
    quote                 = { workspace = true }
    syn                   = { workspace = true, features = ["extra-traits", "parsing", "derive"] }

[features]
    diagnostics = ["darling/diagnostics"]
    serde       = []
