[package]
    authors.workspace       = true
    categories.workspace    = true
    description             = "Derive proc macros for fieldx crate"
    documentation.workspace = true
    edition.workspace       = true
    exclude.workspace       = true
    keywords.workspace      = true
    license-file.workspace  = true
    name                    = "fieldx_derive"
    repository.workspace    = true
    rust-version.workspace  = true
    version                 = "0.2.0-beta.1"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    darling               = { workspace = true, features = ["suggestions"] }
    enum_dispatch         = { workspace = true }
    fieldx_aux            = { workspace = true }
    fieldx_core           = { workspace = true }
    fieldx_derive_support = { workspace = true }
    getset                = { workspace = true }
    once_cell             = { workspace = true }
    paste                 = { workspace = true }
    proc-macro2           = { workspace = true }
    quote                 = { workspace = true }
    rust-format           = { workspace = true }
    serde                 = { workspace = true, optional = true }
    syn                   = { workspace = true, features = ["extra-traits", "parsing"] }
    thiserror             = { workspace = true }

[dev-dependencies]
    fieldx      = { path = "../fieldx", features = ["sync", "serde"] }
    parking_lot = { workspace = true }
    serde_json  = { workspace = true }

[lib]
    proc-macro = true

[features]
    async       = ["fieldx_core/async"]
    diagnostics = ["darling/diagnostics"]
    serde       = ["dep:serde", "fieldx_aux/serde", "fieldx_core/serde"]
    sync        = ["fieldx_core/sync"]
    tracing     = ["fieldx_core/tracing"]
