[package]
name = "fieldx_derive_support"
version = "0.1.3"
description = "Derive proc macros for fieldx_derive crate"
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[dependencies]
quote = { workspace = true }
syn = {workspace = true, features = ["extra-traits", "parsing"] }
darling = { workspace = true, features = [ "suggestions"] }
proc-macro2 = { workspace = true }

[lib]
proc-macro = true
