[package]
    authors.workspace      = true
    categories.workspace   = true
    description            = "Derive proc macros for fieldx_derive crate"
    edition.workspace      = true
    exclude.workspace      = true
    keywords.workspace     = true
    license-file.workspace = true
    name                   = "fieldx_derive_support"
    repository.workspace   = true
    version                = "0.1.8-beta.2"

[dependencies]
    darling     = { workspace = true, features = ["suggestions"] }
    proc-macro2 = { workspace = true }
    quote       = { workspace = true }
    syn         = { workspace = true, features = ["extra-traits", "parsing"] }

[lib]
    proc-macro = true
