[package]
    authors.workspace       = true
    categories.workspace    = true
    description             = "Derive proc macros for fieldx_derive crate"
    documentation.workspace = true
    edition.workspace       = true
    exclude.workspace       = true
    homepage.workspace      = true
    keywords.workspace      = true
    license-file.workspace  = true
    name                    = "fieldx_derive_support"
    repository.workspace    = true
    rust-version.workspace  = true
    version                 = "0.2.1"

[dependencies]
    darling     = { workspace = true, features = ["suggestions"] }
    proc-macro2 = { workspace = true, features = ["span-locations"] }
    quote       = { workspace = true }
    syn         = { workspace = true, features = ["extra-traits", "parsing"] }

[lib]
    path       = "src/lib.rs"
    proc-macro = true
